--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul class="links__container">
         <li class="links__link">
           <p class="links__title">Телеграм</p>
-          <a class="linsk__link" href="https://t.me/yaroslavstepuk"yaroslavstepuk</a>
+          <a class="linsk__link" href="https://t.me/yaroslavstepuk"yaroslavstepuk</a>@yaroslavstepuk
         </li>
         <li class="links__link">
           <p class="links__title">Эл. почта</p>
@@ -56,7 +56,7 @@
     </section>
   </main>
   <footer>
-    <button type="button" class="button-link" href=""> В чем сила, брат? </button>
+    <button type="button" class="button-link" href=""> На связи </button>
   </footer>
   <script type="text/javascript" src="js.js"></script>
 </body>
