--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </li>
         <li class="links__link">
           <p class="links__title">GIT</p>
-          <a class="linsk__link" href="https://github.com/yarikstep/Yaroslav">GitHub</a>
+          <a class="linsk__link" >GitHub</a>
         </li>
       </ul>
     </section>
