--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
       <ul class="links__container">
         <li class="links__link">
           <p class="links__title">Телеграм</p>
-          <a class="linsk__link" href="https://t.me/yaroslavstepuk"yaroslavstepuk</a>@yaroslavstepuk
+          <a class="linsk__link" href="https://t.me/yaroslavstepuk"</a>@yaroslavstepuk
         </li>
         <li class="links__link">
           <p class="links__title">Эл. почта</p>
-          <a class="linsk__link" href="yarstep2205@gmail.com">Gmail</a>
+          <a class="linsk__link" >yarstep2205@gmail.com</a>
         </li>
         <li class="links__link">
           <p class="links__title">GIT</p>
-          <a class="linsk__link" >GitHub</a>
+          <a class="linsk__link">GitHub</a>
         </li>
       </ul>
     </section>
@@ -42,15 +42,15 @@
       <ul class="links__container">
         <li class="links__link">
           <p class="links__title">Читаю</p>
-          <a class="linsk__link" href="@ivan_ivanov">Habr</a>
+          <a class="linsk__link">Habr</a>
         </li>
         <li class="links__link">
           <p class="links__title">Изучаю</p>
-          <a class="linsk__link" href="@ivan_ivanov">Python</a>
+          <a class="linsk__link">Python</a>
         </li>
         <li class="links__link">
           <p class="links__title">Пишу автотесты</p>
-          <a class="linsk__link" href="@ivan_ivanov">в Cypress</a>
+          <a class="linsk__link">в Cypress</a>
         </li>
       </ul>
     </section>
