--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         </li>
         <li class="links__link">
           <p class="links__title">Эл. почта</p>
-          <a class="linsk__link" >yarstep2205@gmail.com</a>
+          <a class="linsk__link"> href="https://mail.google.com/mail/u/yarstep2205@gmail.com"</a>@Gmail
         </li>
         <li class="links__link">
           <p class="links__title">GIT</p>
-          <a class="linsk__link">GitHub</a>
+          <a class="linsk__link"> href="https://github.com/yarikstep/yarikstep.github.io"</a>@GitHub
         </li>
       </ul>
     </section>
