--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
       <ul class="links__container">
         <li class="links__link">
           <p class="links__title">Телеграм</p>
-          <a class="linsk__link" href="https://t.me/yaroslavstepuk"</a>@yaroslavstepuk
+          <a class="linsk__link" href="https://t.me/yaroslavstepuk">@yaroslavstepuk</a>
         </li>
         <li class="links__link">
           <p class="links__title">Эл. почта</p>
-          <a class="linsk__link"> href="https://mail.google.com/mail/u/yarstep2205@gmail.com"</a>@Gmail
+          <a class="linsk__link" href="https://mail.google.com/mail/u/yarstep2205@gmail.com">@Gmail</a>
         </li>
         <li class="links__link">
           <p class="links__title">GIT</p>
-          <a class="linsk__link"> href="https://github.com/yarikstep/yarikstep.github.io"</a>@GitHub
+          <a class="linsk__link" href="https://github.com/yarikstep/yarikstep.github.io">@GitHub</a>
         </li>
       </ul>
     </section>
