--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
   <header class="header">
     <img src="./5384200221384369375.jpg" alt="avatar" class="header__avatar" />
     <div class="header__textContainer">
-      <h1 class="header__title">Ярослав Степук</h1>
-      <h3 class="header__subtitle">Тестировщик ПО </h3>
-      <h3 class="header__subtitle">QA Engineer </h3>
+      <h1 class="header__name_user">Ярослав Степук</h1>
+      <h3 class="header__subtitle">Тестировщик(QA)</h3>
     </div>
   </header>
   <main>
     <section class="links">
-      <h2 class="links__header">Доступен</h2>
+      <h2 class="links__header">Соцсети</h2>
       <ul class="links__container">
         <li class="links__link">
           <p class="links__title">Телеграм</p>
@@ -29,34 +28,33 @@
         </li>
         <li class="links__link">
           <p class="links__title">Эл. почта</p>
-          <a class="linsk__link" href="https://mail.google.com/mail/u/yarstep2205@gmail.com">@Gmail</a>
+          <a class="linsk__link" href="https://mail.google.com/mail/u/yarstep2205@gmail.com">yarikstep2205@gmail.com</a>
         </li>
         <li class="links__link">
           <p class="links__title">GIT</p>
-          <a class="linsk__link" href="https://github.com/yarikstep/yarikstep.github.io">@GitHub</a>
+          <a class="linsk__link" href="https://github.com/yarikstep">yarikstep</a>
         </li>
       </ul>
     </section>
     <section class="links">
-      <h2 class="links__header">Чем занимаюсь вечером</h2>
+      <h2 class="links__header">Интересы</h2>
       <ul class="links__container">
         <li class="links__link">
-          <p class="links__title">Читаю</p>
-          <a class="linsk__link">Habr</a>
+          <p class="links__title">Литература</p>
+          <a class="linsk__link" href="@ivan_ivanov">Психология и философия</a>
         </li>
         <li class="links__link">
-          <p class="links__title">Изучаю</p>
-          <a class="linsk__link">Python</a>
+          <p class="links__title">Развитие</p>
+          <a class="linsk__link" href="@ivan_ivanov">Учу Python, занимаюсь спортом</a>
         </li>
         <li class="links__link">
-          <p class="links__title">Пишу автотесты</p>
-          <a class="linsk__link">в Cypress</a>
-        </li>
+          <p class="links__title">Логика</p>
+          <a class="linsk__link" href="@ivan_ivanov">Изучение логики процессов и оптимизация</a>
       </ul>
     </section>
   </main>
   <footer>
-    <button type="button" class="button-link" href=""> На связи </button>
+    <button type="button" class="button-link" href=""> Пишите, я на связи!</button>
   </footer>
   <script type="text/javascript" src="js.js"></script>
 </body>
